Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132111

qtbase/fa4bd30caa079a3b1e5eac1bb4f17365f456b8f9 breaks -unity-build

XMLWordPrintable

    • 529ebb317 (dev), 2a512fd90 (6.9), 4f05eac0a (dev), a256dba80 (6.9)

      I get compile errors from a -unity-build with a large batch size now:

      In file included from qloggingcategory.h:1,
                       from qcoreapplication_p.h:28,
                       from qcoreapplication_p.h:1,
                       from qlibraryinfo.cpp:778,
                       from unity_0_cxx.cxx:28:
      qloggingcategory.h:113:11: error: reference to ‘QtPrivateLogging’ is ambiguous
        113 |     using QtPrivateLogging::name;
            |           ^~~~~~~~~~~~~~~~
      qsocketnotifier.cpp:23:1: note: in expansion of macro ‘Q_DECLARE_LOGGING_CATEGORY’
         23 | Q_DECLARE_LOGGING_CATEGORY(lcSocketNotifierDeprecation)
            | ^~~~~~~~~~~~~~~~~~~~~~~~~~
      qloggingcategory.h:107:15: note: candidates are: ‘namespace QtPrivate::QtPrivateLogging { }’
        107 |     namespace QtPrivateLogging { export_macro const QLoggingCategory &name(); } \
            |               ^~~~~~~~~~~~~~~~
      

      Looks like https://codereview.qt-project.org/c/qt/qtbase/+/235873 broke having Q_DECLARE_LOGGING_CATEGORY's in differing namespaces.

        For Gerrit Dashboard: QTBUG-132111
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes