src/corelib/io/qloggingcategory.h
@@ -104,20 +104,17 @@ template <> const bool QLoggingCategoryMacroHolder<QtWarningMsg>::IsOutputEnable
 } // unnamed namespace
 
 #define QT_DECLARE_EXPORTED_QT_LOGGING_CATEGORY(name, export_macro) \
-    namespace QtPrivateLogging { export_macro const QLoggingCategory &name(); } \
-    using QtPrivateLogging::name;
+    inline namespace QtPrivateLogging { export_macro const QLoggingCategory &name(); }
 
 #if QT_BUILDING_QT
 #define Q_DECLARE_LOGGING_CATEGORY(name) \
-    namespace QtPrivateLogging { const QLoggingCategory &name(); } \
-    using QtPrivateLogging::name;
+    inline namespace QtPrivateLogging { const QLoggingCategory &name(); }
 
 #define Q_DECLARE_EXPORTED_LOGGING_CATEGORY(name, export_macro) \
-    namespace QtPrivateLogging { \
+    inline namespace QtPrivateLogging { \
     Q_DECL_DEPRECATED_X("Use QT_DECLARE_EXPORTED_QT_LOGGING_CATEGORY in Qt") \
     export_macro const QLoggingCategory &name(); \
-    } \
-    using QtPrivateLogging::name;
+    }
 
 #define Q_LOGGING_CATEGORY_IMPL(name, ...) \
     const QLoggingCategory &name() \
@@ -126,22 +123,13 @@ template <> const bool QLoggingCategoryMacroHolder<QtWarningMsg>::IsOutputEnable
         return category; \
     }
 
-#if defined(Q_CC_GNU_ONLY) && Q_CC_GNU < 1000
-// GCC <10 thinks the "using" declaration from QT_DECLARE_EXPORTED_QT_LOGGING_CATEGORY
-// or Q_DECLARE_LOGGING_CATEGORY conflicts with any weak overload created as part of the definition.
-// So let's make it happy and repeat the "using" instead.
 #define Q_LOGGING_CATEGORY(name, ...) \
-    namespace QtPrivateLogging { Q_LOGGING_CATEGORY_IMPL(name, __VA_ARGS__) } \
-    using QtPrivateLogging::name;
-#else
-#define Q_LOGGING_CATEGORY(name, ...) \
-    namespace QtPrivateLogging { Q_LOGGING_CATEGORY_IMPL(name, __VA_ARGS__) } \
+    inline namespace QtPrivateLogging { Q_LOGGING_CATEGORY_IMPL(name, __VA_ARGS__) } \
     Q_WEAK_OVERLOAD \
     Q_DECL_DEPRECATED_X("Use Q_STATIC_LOGGING_CATEGORY or add " \
                         "either Q_DECLARE_LOGGING_CATEGORY or " \
                         "QT_DECLARE_EXPORTED_QT_LOGGING_CATEGORY in a header") \
     const QLoggingCategory &name() { return QtPrivateLogging::name(); }
-#endif
 
 #define Q_STATIC_LOGGING_CATEGORY(name, ...) \
     static Q_LOGGING_CATEGORY_IMPL(name, __VA_ARGS__)
